# curlens

./: .gitignore  LICENSE  README.md  demo.tape  pyproject.toml
curlens/: __init__.py  backfill.py  chat_store.py  cli.py  config.py  db.py  search.py  summarize.py
curlens/hooks/: __init__.py  session_end.py
tests/: __init__.py  test_chat_store.py  test_hooks.py
