[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "curlens"
version = "0.1.2"
description = "Local Cursor chat summary indexer and search tool"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "cnighut", email = "chiragnighut05@gmail.com"}
]
keywords = ["cursor", "cli", "chat", "search", "summary"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.scripts]
curlens = "curlens.cli:main"

[project.urls]
Homepage = "https://github.com/cnighut/curlens"
Repository = "https://github.com/cnighut/curlens"
Issues = "https://github.com/cnighut/curlens/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["curlens*"]
